@@ -35,6 +35,7 @@
 ##
 ##
 ${importUtils.setPackage($subPackageName)}##
+${importUtils.addType("java.io.Serializable")}##
 ${importUtils.addReservedType("${subPackageName}.${subClassName}")}##
 ${importUtils.addType("${basePackageName}.${baseClassName}")}##
 ${importUtils.addType("org.apache.cayenne.Persistent")}##
@@ -44,7 +45,7 @@ $importUtils.addType(${attr.Type})##
 ${importUtils.generate()}
 
 ##  extends ${baseClassName} - always Object, so skip it
-public abstract class ${subClassName} {
+public abstract class ${subClassName} implements Serializable {
 
 ## Create property names
 #if( $createPropertyNames )
